--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Codepur", "Deepak", "lato", "Yadav"]
+  "cSpell.words": ["Airpods", "Codepur", "Deepak", "lato", "Macbook", "Yadav"]
 }
