--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_gif: ^0.0.4
   google_fonts: ^4.0.1
+  velocity_x: ^3.6.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
