--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.words": ["Airpods", "Codepur", "Deepak", "lato", "Macbook", "Yadav"]
+  "cSpell.words": [
+    "Airpods",
+    "Codepur",
+    "Cupertino",
+    "Deepak",
+    "lato",
+    "Macbook",
+    "Yadav"
+  ]
 }
